--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1>Hello mu'fucka.</h1>
+            <h1>Holi.</h1>
             <hr>
         </div>
     </div>
